add backward compatibility to java 8 compiler